# rencan

./: Cargo.toml  rust-toolchain  rustfmt.toml
demo/: Cargo.toml
demo/shaders/: vertex.glsl
demo/src/: main.rs  models.rs  ui_text.rs
rencan-animation/: Cargo.toml
rencan-animation/examples/: complex_with_mirrors.rs  simple.rs  video.rs
rencan-animation/src/: lib.rs
rencan-core/: Cargo.toml
rencan-core/shaders/: sets.glsl
rencan-core/src/: app.rs  app_info.rs  auto_command_buffer_builder_wrap.rs  buffer.rs  camera.rs  command_factory.rs  hitbox.rs  intersection.rs  lib.rs  model.rs  model_buffers.rs  queue_famile_ext.rs  ray.rs  scene.rs  screen.rs  setable.rs
rencan-core/src/light/: direction.rs  info.rs  mod.rs  point.rs
rencan-render/: Cargo.toml  build.rs
rencan-render/shaders/: checkboard_pattern.glsl  compute_rays.glsl  compute_rays_v2.glsl  defs.glsl  denoise.glsl  divide_workgroup_size.glsl  facing_ratio.glsl  fxaa.glsl  lightning.glsl  make_shadow_rays.glsl  msaa.glsl  ray_tracing.glsl  show_xyz_ordinates.glsl  trace_rays.glsl  trace_rays_first.glsl
rencan-render/shaders/include/: defs.glsl  ray_tracing.glsl
rencan-render/shaders/lightning/: copy_from_buffer_to_image.glsl  lightning.glsl  lightning_gi.glsl  make_gi_rays.glsl  make_lightning_rays_lambertarian.glsl  reflect_from_mirrors.glsl  trace_intersections_for_diffuse_material.glsl  trace_rays_to_lights.glsl  trace_shading_rays.glsl
rencan-render/shaders/sky/: blue.glsl
rencan-render/src/: app.rs  app_builder_rt_ext.rs  camera.rs  lib.rs  test_utils.rs
rencan-render/src/commands/: checkboard_pattern.rs  compute_rays.rs  facing_ratio.rs  lightning.rs  mod.rs  ray_trace.rs  show_xyz_ordinates.rs  sky.rs  squeeze.rs
rencan-render/src/commands/raw/: copy_from_buffer_to_image.rs  denoise.rs  divide_workgroups.rs  lights_diffuse.rs  lights_gi.rs  make_gi_rays.rs  make_lightning_rays_diffuse.rs  mod.rs  msaa.rs  reflect_from_mirror.rs  trace_rays.rs  trace_rays_to_light.rs
rencan-ui/: Cargo.toml
rencan-ui/src/: lib.rs
