[package]
name = "demo"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.24.1"
winit = "0.24.0"
vulkano = { git = "https://github.com/Rua/vulkano/", rev = "e81d9a02f7cd5ad563f4cfd20bb1e7675178d0ac"  }
rencan-render = { path = "../rencan-render" }
rencan-ui = { path = "../rencan-ui" }
