[package]
name = "demo"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.24.1"
winit = "0.24.0"
#vulkano = "0.22.0"
vulkano = { path = "D:/Rust/vulkano/vulkano" }
rencan-render = { path = "../rencan-render" }
rencan-ui = { path = "../rencan-ui" }
rapier3d = { version = "0.8.0", features = [ "simd-stable" ] }
