[package]
name = "rencan-animation"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rencan-render = { path = "../rencan-render" }

vulkano = "0.22.0"
ffmpeg = "0.3.0"
image = "0.23.14"
nalgebra = "0.24.1"
