[package]
name = "rencan-core"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.20.0"
nalgebra = "0.24.1"
crevice = "0.5.0"
vulkano-shaders = "0.20.0"
mint = "0.5.6"