[package]
name = "rencan-core"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# vulkano = "0.22.0"
vulkano = { path = "D:/Rust/vulkano/vulkano" }
nalgebra = "0.24.1"
crevice = "0.5.0"
# vulkano-shaders = "0.22.0"
vulkano-shaders = { path = "D:/Rust/vulkano/vulkano-shaders" }
mint = "0.5.6"
once_cell = "1.6.0"