[package]
name = "rencan-render"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rencan-core = { path = "../rencan-core" }
vulkano = "0.20.0"
mint = "0.5.6"
crevice = "0.5.0"
vulkano-shaders = "0.20.0"
nalgebra = { version = "0.24.1", features = ["mint"] }

[dev-dependencies]
approx = "0.4.0"
