[package]
name = "rencan-render"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rencan-core = { path = "../rencan-core" }
vulkano = { git = "https://github.com/Rua/vulkano/", rev = "e81d9a02f7cd5ad563f4cfd20bb1e7675178d0ac" }
mint = "0.5.6"
crevice = "0.5.0"
vulkano-shaders = "0.21.0"
nalgebra = { version = "0.24.1", features = ["mint"] }

[dev-dependencies]
approx = "0.4.0"
