[package]
name = "rencan-render"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rencan-core = { path = "../rencan-core" }
#vulkano = "0.22.0"
vulkano = { path = "D:/Rust/vulkano/vulkano" }
mint = "0.5.6"
crevice = "0.5.0"
#vulkano-shaders = "0.21.0"
vulkano-shaders = { path = "D:/Rust/vulkano/vulkano-shaders" }
nalgebra = { version = "0.24.1", features = ["mint"] }
once_cell = "1.7.2"
rand = "0.8.3"
png = "0.16.8"

[dev-dependencies]
approx = "0.4.0"
