[package]
name = "rencan-ui"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
vulkano = { git = "https://github.com/vulkano-rs/vulkano", package = "vulkano" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano", package = "vulkano-win" }
