[package]
name = "rencan-ui"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rencan-core = { path = "../rencan-core" }
rencan-render = { path = "../rencan-render" }

winit = "0.24.0"
vulkano = { path = "D:/Rust/vulkano/vulkano" }
vulkano-win = { path = "D:/Rust/vulkano/vulkano-win" }
